--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     },
     "repository": {
       "type": "git",
-      "url": "git+https://github.com/triestpa/guttenberg-search.git"
+      "url": "https://github.com/andrewgmauro/elastibank.git"
     },
-    "author": "patrick.triest@gmail.com",
+    "author": "",
     "license": "MIT",
     "bugs": {
-      "url": "https://github.com/triestpa/guttenberg-search/issues"
+      "url": ""
     },
-    "homepage": "https://github.com/triestpa/guttenberg-search#readme",
+    "homepage": "https://github.com/andrewgmauro/blob/master/elastibank/README.md",
     "dependencies": {
       "elasticsearch": "13.3.1",
       "joi": "13.0.1",
